ch8-health-resource-management/labs/lab02/backend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddoddo-deployment-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ddoddo-backend
  template:
    metadata:
      labels:
        app: ddoddo-backend
    spec:
      containers:
        - name: ddoddo-backend
          image: namung08/ddoddo-backend:v1.0
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
